--- a/my-app/ormconfig.json
+++ b/my-app/ormconfig.json
@@ -5,6 +5,6 @@
     "username": "root", 
     "password": "1234", 
     "database": "demo", 
-    "entity" : ["src / ** / **. entity {.ts, .js}"], 
-    "sync": true 
+    "entity" : ["src/**/**.entity{.ts,.js}"],
+    "synchronize": true
   }
